# ai-invention-4ac301-abliteration-cannot-erase-rlhf-geometric

./: README.md
chat/: README.md
chat/messages/: README.md
chat/messages/1_create_idea/round_1/: 1_gen_hypo.md  2_review_hypo.md
chat/messages/1_create_idea/round_2/: 1_gen_hypo.md  2_review_hypo.md
chat/messages/1_create_idea/round_3/: 1_gen_hypo.md  2_review_hypo.md
chat/messages/2_test_idea/round_1/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
chat/messages/2_test_idea/round_2/: 1_gen_strat.md  4_gen_paper_text.md  5_review_paper.md  6_upd_hypo.md
chat/messages/2_test_idea/round_3/: 1_gen_strat.md  4_gen_paper_text.md  (+2 more)
chat/prompts/: README.md
chat/prompts/3_report_results/: 1_gen_full_paper.md
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  convert_pdf.py  paper.aux  paper.bbl  paper.blg  paper.out
round-1/dataset-1/src/: .terminal_claude_agent_struct_out.json  build_corpus.py  data.py  full_full_data_out.json  mini_data_out.json  preview_data_out.json  pyproject.toml
round-1/research-1/: README.md
round-1/research-1/demo/: research_demo.md
round-1/research-1/src/: .terminal_claude_agent_struct_out.json  research_out.json
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  =4.51.0  method.py  pyproject.toml  smoke_test.py
round-2/experiment-1/src/results/: method_out.json  mini_method_out.json  preview_method_out.json
round-3/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  pyproject.toml
round-3/experiment-1/src/results/: analysis_out.json  mini_method_out.json  preview_method_out.json
round-4/experiment-1/src/: .terminal_claude_agent_struct_out.json  method.py  pyproject.toml
round-4/experiment-1/src/results/: analysis_out.json  full_method_out.json  method_out.json  mini_method_out.json  preview_method_out.json
(+66 files in other folders)
