[project]
name = "sae-reversal-analysis"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.14.0",
    "aiohttp==3.14.1",
    "diptest==0.11.0",
    "filelock==3.29.0",
    "fsspec==2026.4.0",
    "huggingface-hub==1.24.0",
    "jsonschema==4.26.0",
    "loguru==0.7.3",
    "matplotlib==3.11.0",
    "numpy==2.5.1",
    "openai==2.46.0",
    "packaging==26.2",
    "pandas==3.0.3",
    "protobuf==7.35.1",
    "psutil==7.2.2",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "sentencepiece==0.2.2",
    "tenacity==9.1.4",
    "tokenizers==0.22.2",
    "torch==2.6.0+cu124",
    "transformers==5.14.1",
    "tqdm==4.68.4",
]

[tool.uv.sources]
torch = [
    { url = "https://download.pytorch.org/whl/cu124", marker = "sys_platform == 'linux'" },
]
