[project]
name = "sae-null-baseline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.5.1",
    "scipy==1.18.0",
    "loguru==0.7.3",
    "torch==2.6.0+cu124",
    "transformers==5.14.1",
    "huggingface-hub==1.24.0",
    "psutil==7.2.2",
    "diptest==0.11.0",
    "accelerate==1.14.0",
    "safetensors==0.8.0",
]
