[project]
name = "gen-art-experiment-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "certifi==2026.6.17",
    "filelock==3.29.0",
    "fsspec==2026.4.0",
    "hf-xet==1.5.2",
    "huggingface-hub==1.24.0",
    "loguru==0.7.3",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.5.1",
    "packaging==26.2",
    "psutil==7.2.2",
    "regex==2026.7.10",
    "safetensors==0.8.0",
    "scipy==1.18.0",
    "sympy==1.13.1",
    "tokenizers==0.22.2",
    "torch==2.6.0+cu124",
    "tqdm==4.68.4",
    "typing-extensions==4.15.0",
]
